add support for embedding into sage  * send and receive events from the parent document  * change styling to be more flat  * change build settings to serve the app at arbitrary paths  * add server.js script to host the app locally for SAGE  * modify download function to send an event containing the questionnaire instead

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "name": "formbuilder",
     "version": "1.0.0",
+    "homepage": ".",
     "private": true,
     "dependencies": {
         "@ckeditor/ckeditor5-react": "^3.0.0",
