--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-GENERATE_SOURCEMAP=false
+GENERATE_SOURCEMAP=true
 #BROWSER="none"
 CLIENT_ID="61e577d9-4158-4849-af11-0f01c374634d"
 OPENID_ISSUER="https://helseid-sts.test.nhn.no"
