modify bioportal.ts to work in structor

--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ OPENID_ISSUER="https://helseid-sts.test.nhn.no"
 REACT_APP_URL="http://localhost:3000"
 CLAVIS=""
 CINCINNO="GULT-SKILT"
+REACT_APP_BIOPORTAL_APIKEY=
