--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "react-i18next": "^11.7.0",
         "react-router-dom": "^5.2.0",
         "react-scripts": "^4.0.3",
+        "react-select": "^5.3.2",
         "remove-markdown": "^0.5.0"
     },
     "scripts": {
@@ -62,6 +63,7 @@
         "@testing-library/react": "^11.2.3",
         "@testing-library/user-event": "^12.6.1",
         "@types/jest": "^26.0.20",
+        "@types/lodash": "^4.14.182",
         "@types/node": "^14.14.22",
         "@types/react": "^17.0.0",
         "@types/react-beautiful-dnd": "^13.0.0",
