--- a/package.json
+++ b/package.json
@@ -4,27 +4,27 @@
     "homepage": ".",
     "private": true,
     "dependencies": {
-        "@ckeditor/ckeditor5-react": "<=3.0.0",
-        "@helsenorge/ckeditor5-build-markdown": "<=24.0.0",
-        "@nosferatu500/react-sortable-tree": "<=3.0.3",
-        "axios": "<=0.21.1",
-        "crypto-js": "<=4.0.0",
-        "date-fns": "<=2.17.0",
-        "i18next": "<=19.6.3",
-        "idb": "<=6.0.0",
-        "immer": "<=8.0.1",
-        "jose": "<=3.11.3",
-        "openid-client": "<=4.7.2",
-        "qs": "<=6.10.1",
-        "react": "<=16.13.1",
-        "react-beautiful-dnd": "<=13.0.0",
-        "react-datepicker": "<=3.6.0",
-        "react-dnd-html5-backend": "<=14.0.1",
-        "react-dom": "<=16.13.1",
+        "@ckeditor/ckeditor5-react": "^3.0.0",
+        "@helsenorge/ckeditor5-build-markdown": "^24.0.0",
+        "@nosferatu500/react-sortable-tree": "^3.0.3",
+        "axios": "^0.21.1",
+        "crypto-js": "^4.0.0",
+        "date-fns": "^2.17.0",
+        "i18next": "^19.6.3",
+        "idb": "^6.0.0",
+        "immer": "^8.0.1",
+        "jose": "^3.11.3",
+        "openid-client": "^4.7.2",
+        "qs": "^6.10.1",
+        "react": "^17.0.2",
+        "react-beautiful-dnd": "^13.0.0",
+        "react-datepicker": "^3.5.0",
+        "react-dnd-html5-backend": "^14.0.1",
+        "react-dom": "^17.0.2",
         "react-i18next": "^11.7.0",
-        "react-router-dom": "<=5.2.0",
-        "react-scripts": "<=4.0.3",
-        "remove-markdown": "<=0.5.0"
+        "react-router-dom": "^5.2.0",
+        "react-scripts": "^4.0.3",
+        "remove-markdown": "^0.5.0"
     },
     "scripts": {
         "start": "react-scripts start",
